--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
     <h1>git tuotorial</h1>
+    <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis quos harum qui sapiente, saepe eos, enim pariatur, praesentium aliquid velit optio iusto tempore veritatis quia hic consequuntur quam soluta.</P>
     
 </body>
 </html>
