update index.html and script.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
     <h1>git tuotorial</h1>
     <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis quos harum qui sapiente, saepe eos, enim pariatur, praesentium aliquid velit optio iusto tempore veritatis quia hic consequuntur quam soluta.</P>
-    
+    <script src="script.js"></script>
 </body>
 </html>
